--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,4 +1,7 @@
-<script src="simpletest.js"></script>
+<html>
+<head>
+ <title>Tests</title>
+ <script src="simpletest.js"></script>
 <script src="../librarySystem.js"></script>
 
  tests({
@@ -85,3 +88,8 @@
   }
   });
 </script>
+ </head>
+ <body>
+  </body>
+  </html>
+
