--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,7 +3,7 @@
  <title>Tests</title>
  <script src="simpletest.js"></script>
 <script src="../librarySystem.js"></script>
-
+<script>
  tests({
    'It should create and load a library' : function() {
      librarySystem('app', [], function() {
