--- a/tests/tests.html
+++ b/tests/tests.html
@@ -1,7 +1,7 @@
 <html>
 <head>
  <title>Tests</title>
- <script src="simpletest.js"></script>
+ <script src="SimpleTest.js"></script>
 <script src="../librarySystem.js"></script>
 <script>
  tests({
